Fix: Removed text alignment for td and th

--- a/sass/tables.scss
+++ b/sass/tables.scss
@@ -13,7 +13,6 @@
 
   td, th {
     padding: 1rem $remMulPhi;
-    text-align: left;
     border-bottom: 0.05rem solid $greyTint;
   }
 }
